# rustychess

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs
src/chess/: board.rs  engine.rs  game.rs  mod.rs  piece.rs  position.rs
static/: index.html
