[package]
name = "rustychess"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A chess engine API written in Rust"

[dependencies]
actix-web = "4.3.1"      # Web framework for the API
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
serde_json = "1.0"       # JSON handling
thiserror = "1.0"        # Error handling
log = "0.4"              # Logging
env_logger = "0.10"      # Logging implementation
actix-files = "0.6.2"    # For serving static files
uuid = { version = "1.3", features = ["v4", "serde"] } # UUID generation
actix-cors = "0.6.4"     # CORS middleware for Actix

[dev-dependencies]
actix-rt = "2.8"         # Actix runtime for testing
